--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
-    "vue-unsplash": "^3.1.0"
+    "vue-unsplash": "^3.1.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
